<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f6f6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:text="@string/browse_all_categories"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:id="@+id/linear_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_two"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables,UselessParent">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginTop="25dp"
                                android:contentDescription="@string/cat_img"
                                android:src="@drawable/stockrom" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/stock_rom"
                                android:textColor="#bcbcbc"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <FrameLayout
                            android:id="@+id/stockrom"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </FrameLayout>

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables,UselessParent">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginTop="25dp"
                                android:contentDescription="@string/cat_img"
                                android:src="@drawable/customrom" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/custom_rom"
                                android:textColor="#bcbcbc"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <FrameLayout
                            android:id="@+id/customrom"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </FrameLayout>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables,UselessParent">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginTop="25dp"
                                android:contentDescription="@string/cat_img"
                                android:src="@drawable/gcam" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/google_camera"
                                android:textColor="#bcbcbc"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <FrameLayout
                            android:id="@+id/gcam"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </FrameLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_three"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables,UselessParent">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginTop="25dp"
                                android:contentDescription="@string/cat_img"
                                android:src="@drawable/kernal" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/kernal"
                                android:textColor="#bcbcbc"
                                android:textSize="14sp" />
                        </LinearLayout>
                        <FrameLayout
                            android:id="@+id/forthbtn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </FrameLayout>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables,UselessParent">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginTop="25dp"
                                android:contentDescription="@string/cat_img"
                                android:src="@drawable/bootunloack" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/bootloader_guaid"
                                android:textColor="#bcbcbc"
                                android:textSize="14sp" />
                        </LinearLayout>
                        <FrameLayout
                            android:id="@+id/fifthbtn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </FrameLayout>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables,UselessParent">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginTop="25dp"
                                android:contentDescription="@string/cat_img"
                                android:src="@drawable/tools" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/tools"
                                android:textColor="#bcbcbc"
                                android:textSize="14sp" />

                        </LinearLayout>
                        <FrameLayout
                            android:id="@+id/sixthbtn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </FrameLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>